--- a/locdb-journals.ipynb
+++ b/locdb-journals.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Here we make an analysis of the journals covered by the LOC-DB project, where we concentrate on the social sciences journals licensed by the Mannheim University Library published in 2011.\n",
     "\n",
-    "## Requirements\n",
+    "## Requirements and Etiquette\n",
     "\n",
     "You need to have jupyter installed together with python, and in python you need the crossrefapi, which can be installed for example like this:\n",
     "```py\n",
@@ -19,13 +19,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LOC-DB/ (https://locdb.bib.uni-mannheim.de/; mailto:Philipp Zumstein (Mannheim University Library)) BasedOn: CrossrefAPI/1.2.0'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from crossref.restful import Works, Journals"
+    "from crossref.restful import Works, Journals, Etiquette\n",
+    "my_etiquette = Etiquette('LOC-DB', '', 'https://locdb.bib.uni-mannheim.de/', 'Philipp Zumstein (Mannheim University Library)')\n",
+    "str(my_etiquette)"
    ]
   },
   {
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -96,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -113,7 +124,7 @@
     "k = 0\n",
     "sum = 0\n",
     "for issn in issnList:\n",
-    "    journal = Journals().journal(issn)\n",
+    "    journal = Journals(etiquette=my_etiquette).journal(issn)\n",
     "    if journal:\n",
     "        inCrossref[issn] = True\n",
     "        if (journal['breakdowns'] and journal['breakdowns']['dois-by-issued-year']):\n",
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -164,15 +175,17 @@
     "k = 0\n",
     "z = 0\n",
     "sum = 0\n",
-    "errors = 0\n",
+    "misclassified = 0\n",
     "onlyUnstructured = 0\n",
     "hardToResolve = 0\n",
     "occurrences = {}\n",
     "examplesUnstructured = []\n",
     "examplesHard = []\n",
+    "examplesMisclassified = []\n",
+    "publisherMisclassified = {}\n",
     "for issn in issnList:\n",
-    "    if (results[issn]['found']):\n",
-    "        works = Journals().works(issn).filter(has_references=\"true\").filter(from_pub_date=2011).filter(until_pub_date=2011)\n",
+    "    if (inCrossref[issn]):\n",
+    "        works = Journals(etiquette=my_etiquette).works(issn).filter(has_references=\"true\").filter(from_pub_date=2011).filter(until_pub_date=2011)\n",
     "        for article in works:\n",
     "            nref = article['reference-count']\n",
     "            k += 1\n",
@@ -193,7 +206,14 @@
     "                            if (hardToResolve<10):\n",
     "                                examplesHard.append(\"First examples of a hard case but not with only unstructured text: \" + str(reference) + \" from the article \" + article['DOI'])\n",
     "                            hardToResolve += 1\n",
-    "            else: errors += 1\n",
+    "            else:\n",
+    "                if (misclassified<10):\n",
+    "                    examplesMisclassified.append(article['DOI'])\n",
+    "                misclassified += 1\n",
+    "                if (article['publisher'] in publisherMisclassified):\n",
+    "                    publisherMisclassified[article['publisher']] += 1\n",
+    "                else:\n",
+    "                    publisherMisclassified[article['publisher']] = 1\n",
     "        if (works.count()>0): z += 1\n",
     "\n",
     "referencePerArticle = sum/(k * 1.0)\n",
@@ -220,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +249,7 @@
        "297547.1627816015"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,6 +269,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Misclassified Entries in Crossref\n",
+    "\n",
+    "It is possible that in Crossref an entry is classified to `has_references`, but there are no openly shared references in the field `reference`. We counted these cases above and saved some examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1317\n",
+      "{u'Max Planck Institute for Demographic Research': 58, u'Elsevier BV': 603, u'Hogrefe Publishing Group': 34, u'Nomos Verlag': 27, u'University of Chicago Press': 187, u'Guilford Publications': 43, u'Society for Applied Anthropology': 39, u'Oxford University Press (OUP)': 226, u'Annual Reviews': 47, u'Duncker & Humblot GmbH': 53}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[u'10.1007/s11578-011-0123-0',\n",
+       " u'10.1007/s11578-011-0124-z',\n",
+       " u'10.1007/s11578-011-0128-8',\n",
+       " u'10.1007/s11578-011-0126-x',\n",
+       " u'10.1007/s11578-011-0129-7',\n",
+       " u'10.1007/s11578-011-0130-1',\n",
+       " u'10.1007/s11578-011-0132-z',\n",
+       " u'10.1007/s11578-011-0133-y',\n",
+       " u'10.1007/s11578-011-0134-x',\n",
+       " u'10.1007/s11578-011-0135-9']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(misclassified)\n",
+    "print(publisherMisclassified)\n",
+    "examplesMisclassified"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These examples have the information `reference-count` in Crossref but not the `reference`(s) itself."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Quality\n",
     "\n",
     "In the loop above we also have measured several indicators for the data quality."
@@ -256,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +363,7 @@
        " u'year': 73205}"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
