--- a/locdb-journals.ipynb
+++ b/locdb-journals.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "'LOC-DB/ (https://locdb.bib.uni-mannheim.de/; mailto:Philipp Zumstein (Mannheim University Library)) BasedOn: CrossrefAPI/1.2.0'"
+       "'LOC-DB/ (https://github.com/locdb/locdb-journal-analysis/blob/master/locdb-journals.ipynb; mailto:Philipp Zumstein (Mannheim University Library)) BasedOn: CrossrefAPI/1.2.0'"
       ]
      },
      "execution_count": 1,
@@ -35,7 +35,7 @@
    ],
    "source": [
     "from crossref.restful import Works, Journals, Etiquette\n",
-    "my_etiquette = Etiquette('LOC-DB', '', 'https://locdb.bib.uni-mannheim.de/', 'Philipp Zumstein (Mannheim University Library)')\n",
+    "my_etiquette = Etiquette('LOC-DB', '', 'https://github.com/locdb/locdb-journal-analysis/blob/master/locdb-journals.ipynb', 'Philipp Zumstein (Mannheim University Library)')\n",
     "str(my_etiquette)"
    ]
   },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,6 @@
     "        inCrossref[issn] = True\n",
     "        if (journal['breakdowns'] and journal['breakdowns']['dois-by-issued-year']):\n",
     "            dois = journal['breakdowns']['dois-by-issued-year']\n",
-    "            #results[issn]['doisPerYear'] = {}\n",
     "            for doi in dois:\n",
     "                if doi[0]==2011:\n",
     "                    k += 1\n",
@@ -175,14 +174,14 @@
     "k = 0\n",
     "z = 0\n",
     "sum = 0\n",
-    "misclassified = 0\n",
     "onlyUnstructured = 0\n",
     "hardToResolve = 0\n",
+    "closedReferences = 0\n",
     "occurrences = {}\n",
     "examplesUnstructured = []\n",
     "examplesHard = []\n",
-    "examplesMisclassified = []\n",
-    "publisherMisclassified = {}\n",
+    "examplesClosedReferences = []\n",
+    "publisherClosedReferences = {}\n",
     "for issn in issnList:\n",
     "    if (inCrossref[issn]):\n",
     "        works = Journals(etiquette=my_etiquette).works(issn).filter(has_references=\"true\").filter(from_pub_date=2011).filter(until_pub_date=2011)\n",
@@ -207,13 +206,13 @@
     "                                examplesHard.append(\"First examples of a hard case but not with only unstructured text: \" + str(reference) + \" from the article \" + article['DOI'])\n",
     "                            hardToResolve += 1\n",
     "            else:\n",
-    "                if (misclassified<10):\n",
-    "                    examplesMisclassified.append(article['DOI'])\n",
-    "                misclassified += 1\n",
-    "                if (article['publisher'] in publisherMisclassified):\n",
-    "                    publisherMisclassified[article['publisher']] += 1\n",
+    "                if (closedReferences<10):\n",
+    "                    examplesClosedReferences.append(article['DOI'])\n",
+    "                closedReferences += 1\n",
+    "                if (article['publisher'] in publisherClosedReferences):\n",
+    "                    publisherClosedReferences[article['publisher']] += 1\n",
     "                else:\n",
-    "                    publisherMisclassified[article['publisher']] = 1\n",
+    "                    publisherClosedReferences[article['publisher']] = 1\n",
     "        if (works.count()>0): z += 1\n",
     "\n",
     "referencePerArticle = sum/(k * 1.0)\n",
@@ -269,14 +268,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Misclassified Entries in Crossref\n",
+    "## Closed References in Crossref\n",
     "\n",
     "It is possible that in Crossref an entry is classified to `has_references`, but there are no openly shared references in the field `reference`. We counted these cases above and saved some examples:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -302,22 +301,15 @@
        " u'10.1007/s11578-011-0135-9']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(misclassified)\n",
-    "print(publisherMisclassified)\n",
-    "examplesMisclassified"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "These examples have the information `reference-count` in Crossref but not the `reference`(s) itself."
+    "print(closedReferences)\n",
+    "print(publisherClosedReferences)\n",
+    "examplesClosedReferences"
    ]
   },
   {
@@ -331,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +355,7 @@
        " u'year': 73205}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
