Make pip install explicitely

--- a/locdb-journals.ipynb
+++ b/locdb-journals.ipynb
@@ -11,10 +11,18 @@
     "\n",
     "## Requirements and Etiquette\n",
     "\n",
-    "You need to have jupyter installed together with python, and in python you need the crossrefapi, which can be installed for example like this:\n",
-    "```py\n",
-    "pip install crossrefapi\n",
-    "```"
+    "You need to have jupyter installed together with python, and in python you need the crossrefapi, which can be installed for example like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install crossrefapi -q"
    ]
   },
   {
