Add books estimation

--- a/locdb-journals.ipynb
+++ b/locdb-journals.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -59,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "issnList =  ['0342-300X', '0033-5177', '0340-0425', '0023-2653', '0049-089x', '1550-3585', '0335-5322', '0065-2601', '0342-2275', '0092-6566', '0340-613x', '1869-8980', '0097-9740', '1864-9335', '0514-2776', '0038-6073', '0003-1224', '0018-7267', '0038-0164', '0027-3171', '0037-783X', '0035-2969', '0033-362X', '0038-0261', '0037-7732', '0022-2445', '0022-1031', '0038-0296', '0197-6664', '0894-3257', '0067-5830', '0146-1672', '0165-4896', '0278-016X', '0002-9602', '0007-1315', '0020-7152', '0011-3204', '0018-7259', '0037-8046', '0019-8676', '0022-3506', '0163-786X', '0378-8733', '0539-0184', '0038-0385', '0038-0407', '0066-6505', '0171-5860', '0933-9361', '0735-2751', '0266-7215', '0276-5624', '0749-5978', '0174-0202', '0048-8046', '0343-4109', '0001-6993', '0197-3533', '0360-0572', '0162-895x', '0002-7642', '1231-1413', '0046-2772', '0022-250x', '0340-1804', '0021-8308', '0094-3061', '0049-1241', '0048-3931', '1536-867X', '0730-8884', '0948-423X', '1749-5679', '0340-918X', '1043-4631', '1469-5405', '0891-2432', '0950-0170', '1477-996X', '0141-9889', '0098-7921', '0304-2421', '0011-3921', '0032-3292', '0044-118x', '0863-1808', '0263-2764', '0002-7162', '0038-609x', '0037-7791', '0012-155X', '0958-9287', '0951-6328', '1438-5627', '1864-3361', '1360-7804', '1435-9871', '0959-6801', '1468-0181', '0019-8692']"
@@ -79,8 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -104,19 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "inCrossref = {}"
+    "inCrossref = {}\n",
+    "noDoisList = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -124,7 +132,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(86, 5737, 66.70930232558139)\n"
+      "86 5737 66.70930232558139\n",
+      "Max 511\n",
+      "Min 13\n"
      ]
     }
    ],
@@ -141,12 +151,17 @@
     "                if doi[0]==2011:\n",
     "                    k += 1\n",
     "                    sum += doi[1]\n",
+    "                    noDoisList.append(doi[1])\n",
     "    else:\n",
     "        inCrossref[issn] = False\n",
     "doisPerJournal = sum/(k * 1.0)\n",
     "print(k, sum, doisPerJournal)\n",
+    "print(\"Max\", max(noDoisList))\n",
+    "print(\"Min\", min(noDoisList))\n",
     "\n",
-    "# result: (86, 5737, 66.70930232558139)"
+    "# result: (86, 5737, 66.70930232558139)\n",
+    "# Max 511\n",
+    "# Min 13"
    ]
   },
   {
@@ -168,13 +183,17 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3835, 80, 169361, 44.1619295958279)\n"
+      "3835 80 169361 44.1619295958279\n",
+      "Max 272\n",
+      "Min 1\n"
      ]
     }
    ],
@@ -190,6 +209,7 @@
     "examplesHard = []\n",
     "examplesClosedReferences = []\n",
     "publisherClosedReferences = {}\n",
+    "noReferencesList= []\n",
     "for issn in issnList:\n",
     "    if (inCrossref[issn]):\n",
     "        works = Journals(etiquette=my_etiquette).works(issn).filter(has_references=\"true\").filter(from_pub_date=2011).filter(until_pub_date=2011)\n",
@@ -197,6 +217,7 @@
     "            nref = article['reference-count']\n",
     "            k += 1\n",
     "            sum += nref\n",
+    "            noReferencesList.append(nref)\n",
     "            if ('reference' in article):\n",
     "                for reference in article['reference']:\n",
     "                    for label in reference.keys():\n",
@@ -225,8 +246,12 @@
     "\n",
     "referencePerArticle = sum/(k * 1.0)\n",
     "print(k, z, sum, referencePerArticle)\n",
+    "print(\"Max\" , max(noReferencesList))\n",
+    "print(\"Min\", min(noReferencesList))\n",
     "\n",
-    "# result: (3835, 80, 169361, 44.1619295958279)"
+    "# result: (3835, 80, 169361, 44.1619295958279)\n",
+    "# Max 272\n",
+    "# Min 1"
    ]
   },
   {
@@ -248,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -284,7 +311,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -332,7 +361,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -400,7 +431,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -448,7 +481,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -497,6 +532,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Estimation of References in Books\n",
+    "The estimation of references in books is a more tricky, as we do not have a list of identifiers with which we can start. But as an approximation, we can call all resources in Crossref published in 2011, which have a certain Crossref resource type.\n",
+    "The list of resource types in Crossref can be found here: http://api.crossref.org/types .\n",
+    "Problem: This is neither specific to the UniMA purchases nor domain-specific. Question: Can we do something with property category-name?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of monographs returned:  3848\n",
+      "Max 166\n",
+      "Min 1\n",
+      "Sum of references:  170141\n",
+      "Average:  44.21543659043659\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for monographs\n",
+    "works = Works(etiquette=my_etiquette).filter(has_references=\"true\").filter(from_pub_date=2011).filter(until_pub_date=2011).filter(type=\"monograph\")\n",
+    "noReferencesList = []\n",
+    "for work in works:\n",
+    "    nref = work['reference-count']\n",
+    "    k += 1\n",
+    "    sum += nref\n",
+    "    noReferencesList.append(nref)\n",
+    "print(\"Number of monographs returned: \", k)    \n",
+    "print(\"Max\", max(noReferencesList))\n",
+    "print(\"Min\", min(noReferencesList))\n",
+    "print(\"Sum of references: \", sum)\n",
+    "print(\"Average: \", sum/k)\n",
+    "# Number of monographs returned:  3848\n",
+    "# Max 166\n",
+    "# Min 1\n",
+    "# Sum of references:  170141\n",
+    "# Average:  44.21543659043659"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of monographs returned:  3862\n",
+      "Max 54\n",
+      "Min 2\n",
+      "Sum of references:  170546\n",
+      "Average:  44.160020714655616\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for books\n",
+    "works = Works(etiquette=my_etiquette).filter(has_references=\"true\").filter(from_pub_date=2011).filter(until_pub_date=2011).filter(type=\"book\")\n",
+    "noReferencesList = []\n",
+    "for work in works:\n",
+    "    nref = work['reference-count']\n",
+    "    k += 1\n",
+    "    sum += nref\n",
+    "    noReferencesList.append(nref)\n",
+    "print(\"Number of books returned: \", k)    \n",
+    "print(\"Max\", max(noReferencesList))\n",
+    "print(\"Min\", min(noReferencesList))\n",
+    "print(\"Sum of references: \", sum)\n",
+    "print(\"Average: \", sum/k)\n",
+    "# Number of books returned:  3862\n",
+    "# Max 54\n",
+    "# Min 2\n",
+    "# Sum of references:  170546\n",
+    "# Average:  44.160020714655616"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Acknowledgement\n",
     "\n",
     "This Jupyter notebook is heavenly influenced on the nice demo [crossref-api-demo.ipynb](https://github.com/CrossRef/rest-api-doc/blob/master/demos/crossref-api-demo.ipynb) by Geoffrey Bilder and is based on the Python library [crossrefapi](https://github.com/fabiobatalha/crossrefapi) by Fabio Batalha and all of this is based on the great [Crossref API](https://github.com/CrossRef/rest-api-doc)."
@@ -505,21 +630,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
