--- a/locdb-journals.ipynb
+++ b/locdb-journals.ipynb
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -549,11 +549,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of monographs returned:  3848\n",
+      "Number of monographs returned:  3902\n",
       "Max 166\n",
       "Min 1\n",
-      "Sum of references:  170141\n",
-      "Average:  44.21543659043659\n"
+      "Sum of references:  172511\n",
+      "Average:  44.2109174782163\n"
      ]
     }
    ],
@@ -561,11 +561,13 @@
     "# for monographs\n",
     "works = Works(etiquette=my_etiquette).filter(has_references=\"true\").filter(from_pub_date=2011).filter(until_pub_date=2011).filter(type=\"monograph\")\n",
     "noReferencesList = []\n",
+    "totalK = 0\n",
     "for work in works:\n",
     "    nref = work['reference-count']\n",
     "    k += 1\n",
     "    sum += nref\n",
     "    noReferencesList.append(nref)\n",
+    "totalK += k\n",
     "print(\"Number of monographs returned: \", k)    \n",
     "print(\"Max\", max(noReferencesList))\n",
     "print(\"Min\", min(noReferencesList))\n",
@@ -580,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -589,26 +591,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of monographs returned:  3862\n",
+      "Number of books returned:  3916\n",
       "Max 54\n",
       "Min 2\n",
-      "Sum of references:  170546\n",
-      "Average:  44.160020714655616\n"
+      "Sum of references:  172916\n",
+      "Average:  44.15628192032686\n"
      ]
     }
    ],
    "source": [
     "# for books\n",
     "works = Works(etiquette=my_etiquette).filter(has_references=\"true\").filter(from_pub_date=2011).filter(until_pub_date=2011).filter(type=\"book\")\n",
-    "noReferencesList = []\n",
+    "noReferencesListBooks = []\n",
     "for work in works:\n",
     "    nref = work['reference-count']\n",
     "    k += 1\n",
     "    sum += nref\n",
-    "    noReferencesList.append(nref)\n",
+    "    noReferencesListBooks.append(nref)\n",
+    "totalK +=k\n",
     "print(\"Number of books returned: \", k)    \n",
-    "print(\"Max\", max(noReferencesList))\n",
-    "print(\"Min\", min(noReferencesList))\n",
+    "print(\"Max\", max(noReferencesListBooks))\n",
+    "print(\"Min\", min(noReferencesListBooks))\n",
     "print(\"Sum of references: \", sum)\n",
     "print(\"Average: \", sum/k)\n",
     "# Number of books returned:  3862\n",
@@ -622,10 +625,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can also combine this estimation.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total monographs and books in 2011 with references 7818\n",
+      "Min References 1\n",
+      "Max References 166\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Total monographs and books in 2011 with references\", totalK)\n",
+    "totalBooksList = noReferencesList + noReferencesListBooks\n",
+    "print(\"Min References\", min(totalBooksList))\n",
+    "print(\"Max References\", max(totalBooksList))\n",
+    "# Sum is not callable as it was used as a variable name\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Acknowledgement\n",
     "\n",
     "This Jupyter notebook is heavenly influenced on the nice demo [crossref-api-demo.ipynb](https://github.com/CrossRef/rest-api-doc/blob/master/demos/crossref-api-demo.ipynb) by Geoffrey Bilder and is based on the Python library [crossrefapi](https://github.com/fabiobatalha/crossrefapi) by Fabio Batalha and all of this is based on the great [Crossref API](https://github.com/CrossRef/rest-api-doc)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
