Fix problem in book analysis by setting back variables

--- a/locdb-journals.ipynb
+++ b/locdb-journals.ipynb
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -549,11 +549,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of monographs returned:  3902\n",
+      "Number of monographs returned:  13\n",
       "Max 166\n",
       "Min 1\n",
-      "Sum of references:  172511\n",
-      "Average:  44.2109174782163\n"
+      "Sum of references:  780\n",
+      "Average:  60.0\n"
      ]
     }
    ],
@@ -562,6 +562,8 @@
     "works = Works(etiquette=my_etiquette).filter(has_references=\"true\").filter(from_pub_date=2011).filter(until_pub_date=2011).filter(type=\"monograph\")\n",
     "noReferencesList = []\n",
     "totalK = 0\n",
+    "k = 0\n",
+    "sum = 0\n",
     "for work in works:\n",
     "    nref = work['reference-count']\n",
     "    k += 1\n",
@@ -582,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -591,11 +593,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of books returned:  3916\n",
+      "Number of books returned:  14\n",
       "Max 54\n",
       "Min 2\n",
-      "Sum of references:  172916\n",
-      "Average:  44.15628192032686\n"
+      "Sum of references:  405\n",
+      "Average:  28.928571428571427\n"
      ]
     }
    ],
@@ -603,6 +605,8 @@
     "# for books\n",
     "works = Works(etiquette=my_etiquette).filter(has_references=\"true\").filter(from_pub_date=2011).filter(until_pub_date=2011).filter(type=\"book\")\n",
     "noReferencesListBooks = []\n",
+    "k = 0\n",
+    "sum = 0\n",
     "for work in works:\n",
     "    nref = work['reference-count']\n",
     "    k += 1\n",
@@ -630,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -639,7 +643,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total monographs and books in 2011 with references 7818\n",
+      "Total monographs and books in 2011 with references 27\n",
       "Min References 1\n",
       "Max References 166\n"
      ]
